--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,25 @@
 # don't include third-party dependencies.
 !lib/README.md
 .DS_Store
+.DS_Store
+.env
+.flaskenv
+*.pyc
+*.pyo
+env
+env*
+dist
+build
+*.egg
+*.egg-info
+_mailinglist
+.tox
+.cache/
+.idea/
+
+# Coverage reports
+htmlcov
+.coverage
+.coverage.*
+*,cover
+
